fix: button overflow on mobile

--- a/c2cgeoform/static/src/main.scss
+++ b/c2cgeoform/static/src/main.scss
@@ -12,6 +12,9 @@
   top: 4.5em;
   left: 0.5em;
 }
+.ol-touch .c2cgeoform-locate-me-btn {
+  top: 5.5em;
+}
 .c2cgeoform-locate-me-btn .glyphicon {
   top: 0;
 }
